Fixing forums reply video layout issue

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_activity_entries.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_activity_entries.scss
@@ -935,13 +935,15 @@ span.dashicons.dashicons-admin-file:before {
 }
 
 #media-stream.media .bb-photo-thumb,
-.bb-activity-media-wrap .bb-activity-media-elem.media-activity {
+.bb-activity-media-wrap .bb-activity-media-elem.media-activity,
+.bb-activity-media-wrap .bb-activity-video-elem {
 	position: relative;
 
 	&.is-visible,
 	&:hover {
 
-		.media-action-wrap {
+		.media-action-wrap,
+		.video-action-wrap {
 			opacity: 1;
 			visibility: visible;
 		}
@@ -950,14 +952,16 @@ span.dashicons.dashicons-admin-file:before {
 
 	&.is-visible {
 
-		.media-action-wrap .media-action_list {
+		.media-action-wrap .media-action_list,
+		.video-action-wrap .video-action_list {
 			opacity: 1;
 			visibility: visible;
 		}
 
 	}
 
-	.media-action-wrap {
+	.media-action-wrap,
+	.video-action-wrap {
 		position: absolute;
 		right: 15px;
 		top: 21px;
@@ -997,7 +1001,8 @@ span.dashicons.dashicons-admin-file:before {
 				margin-top: -1px;
 			}
 
-			&.media-action_more {
+			&.media-action_more,
+			&.video-action_more {
 
 				i {
 					border-radius: 50%;
@@ -1010,7 +1015,8 @@ span.dashicons.dashicons-admin-file:before {
 
 			}
 
-			&.media-action_download {
+			&.media-action_download,
+			&.video-action_download {
 
 				i {
 					border-left-width: 1px;
@@ -1020,7 +1026,8 @@ span.dashicons.dashicons-admin-file:before {
 			}
 		}
 
-		.media-action_list {
+		.media-action_list,
+		.video-action_list {
 			position: absolute;
 			top: 26px;
 			right: 1px;
@@ -1125,12 +1132,14 @@ span.dashicons.dashicons-admin-file:before {
 	/* smartphones, touchscreens */
 	@media (hover: none) and (pointer: coarse) {
 
-		.media-action-wrap {
+		.media-action-wrap,
+		.video-action-wrap {
 			opacity: 1;
 			visibility: visible;
 		}
 
-		&.hideact-grid-1-2 .media-action-wrap {
+		&.hideact-grid-1-2 .media-action-wrap,
+		&.hideact-grid-1-2 .video-action-wrap {
 			display: none;
 		}
 	}
